# audible-neural-network

./: .gitignore  Cargo.toml  README.md
src/: blob_generator.ipynb  main.rs  training_data.rs
src/music/: control_knobs.rs  instruments.rs  midi.rs  mod.rs  musical_snippets.rs  passage.rs  port_finder.rs  score.rs  score_generation.rs
src/network/: layer_sizes.rs  mod.rs  network.rs  parameter_transfer.rs  parameters.rs
