[package]
name = "audible-neural-network"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
ndarray = "0.16.1"
rand = "0.8.0"
plotters = "0.3.7"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
midir = "0.10.1"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
